--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "4.3.1",
+    "@prisma/client": "^4.3.1",
     "@tailwindcss/forms": "^0.5.3",
     "next": "12.2.5",
     "react": "18.2.0",
