--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.35.0"
+    "react-hook-form": "^7.35.0",
+    "twilio": "^3.82.1"
   },
   "devDependencies": {
     "@types/node": "18.7.13",
